[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/LeverOff.png" type="Texture" id=1]
[ext_resource path="res://Entities/Lever/Lever.gd" type="Script" id=2]
[ext_resource path="res://Assets/LeverOn.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 10 )

[node name="Lever" type="Area2D"]
script = ExtResource( 2 )

[node name="LeverOff" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 1 )

[node name="LeverOn" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -10 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Button_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Button_body_exited"]
